8373858: [lworld] Segmented clearing for flatArrays with no oops in ZGC